{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 400,
  "lineage": "f36acf57-549f-612c-38f3-64ce93a9e2d6",
  "resources": [
    {
      "module": "module.public_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Instance",
      "provider": "module.public_instance.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05ced23e7b71d428c",
            "arn": "arn:aws:ec2:eu-central-1:513438565697:instance/i-0ca68b151607cd62e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": true,
            "hibernation": false,
            "id": "i-0ca68b151607cd62e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastionHost",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "password_data": "Z5mAUpEV6Kr2yBoq8U2vK9cd+JRnYvYqKOsLGqFQCLHI4kB1gRYmQCkviYoh9QR0UquG4tsTT9c1e9vov55WNE+yvbgVFFUcCXADwo6iaqUusbLI3JWdSu3NqGT1g4eTeI2nu/HEtVyoXVEHzj3Pu2S+28jCjbkHe7uZu6NT0TYduWl8/VA4WmpJ+wV7ES3k/bSX9Qa/H/dzeeKEJiaipPgE9rvdRxDQvRZ/C5GjWX6FhhkVfcHOt0IHtga9ph1U1sWxakwaQGR/II/maworf7jnKRqDKx37HHE5faaN0lYU7t5EWBQaLXRymcsM24AxPOwSiHLGtC5nlB3LILLOKw==",
            "primary_network_interface_id": "eni-0bc46ca45b2849cb7",
            "private_dns": "ip-10-0-0-76.eu-central-1.compute.internal",
            "private_ip": "10.0.0.76",
            "public_ip": "3.120.193.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0dfa541fc352f091b",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0230f68c3bad7cbe3",
            "tags": {
              "Name": "Public Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ed12cc3b652409b4"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.sg_allow_rdp",
            "module.vpc_bh.aws_subnet.publicsubnet1",
            "module.vpc_bh.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Instance",
      "provider": "module.private_instance.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05ced23e7b71d428c",
            "arn": "arn:aws:ec2:eu-central-1:513438565697:instance/i-01fd0f7a8e8b56b1e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": true,
            "hibernation": false,
            "id": "i-01fd0f7a8e8b56b1e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastionHost",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "password_data": "U/76GDSay0gsF0t78ZmNzZDfV50BOZioCpC+xDnmfyYYMVZW2u4WGyFeHdru1Hu7P7UEIVaFxwgz+pR5F1RDElSkmf8IqSj5HuPWDgxq8kCwRIZUN2BSI/d40yYYKOVsa4AMU552sKn145DjAWpnLf+EX61aU3TahoaDW0bNd/Bh+daZ2E7V9NZMzvKgtimkAZphru1YLnCKZjkKLS8w2MnazWfvegGmA7mAOzTxhzd4dxhEeU3teGUul4IeKwCAvuWk7I9F4g41V8kya9qERqHoUXN3tN2AURIlq2QKGR7yaUbts17lnmzCTSI84/qrJ96myvVgm+gMz3nfdr9vkA==",
            "primary_network_interface_id": "eni-01d509a31092831fb",
            "private_dns": "ip-10-0-2-246.eu-central-1.compute.internal",
            "private_ip": "10.0.2.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b075e2b79fc40cc6",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078a4c439350d4285",
            "tags": {
              "Name": "Private Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ed12cc3b652409b4"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.sg_allow_rdp",
            "module.vpc_bh.aws_subnet.privatesubnet1",
            "module.vpc_bh.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_bh",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc_bh.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:513438565697:internet-gateway/igw-0f2747120fa28363c",
            "id": "igw-0f2747120fa28363c",
            "owner_id": "513438565697",
            "tags": {
              "Name": "IGW-BH"
            },
            "vpc_id": "vpc-03b7053e2bb8566c6"
          },
          "dependencies": [
            "module.vpc_bh.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_bh",
      "mode": "managed",
      "type": "aws_route",
      "name": "target_igw",
      "provider": "module.vpc_bh.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f2747120fa28363c",
            "id": "r-rtb-03a3573f108eab4081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03a3573f108eab408",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc_bh.aws_internet_gateway.igw",
            "module.vpc_bh.aws_route_table.publicRT",
            "module.vpc_bh.aws_subnet.publicsubnet1",
            "module.vpc_bh.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_bh",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRT",
      "provider": "module.vpc_bh.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03e553efda44c7bd7",
            "owner_id": "513438565697",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PrivateRT-BH"
            },
            "vpc_id": "vpc-03b7053e2bb8566c6"
          },
          "dependencies": [
            "module.vpc_bh.aws_subnet.privatesubnet1",
            "module.vpc_bh.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_bh",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT",
      "provider": "module.vpc_bh.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03a3573f108eab408",
            "owner_id": "513438565697",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PublicRT-BH"
            },
            "vpc_id": "vpc-03b7053e2bb8566c6"
          },
          "dependencies": [
            "module.vpc_bh.aws_subnet.publicsubnet1",
            "module.vpc_bh.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_bh",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association_1",
      "provider": "module.vpc_bh.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0734e5b740c952747",
            "route_table_id": "rtb-03a3573f108eab408",
            "subnet_id": "subnet-0230f68c3bad7cbe3"
          },
          "dependencies": [
            "module.vpc_bh.aws_route_table.publicRT",
            "module.vpc_bh.aws_subnet.publicsubnet1",
            "module.vpc_bh.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_bh",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association_2",
      "provider": "module.vpc_bh.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00393182f8020fb4f",
            "route_table_id": "rtb-03a3573f108eab408",
            "subnet_id": "subnet-03f6a9c398003bfb5"
          },
          "dependencies": [
            "module.vpc_bh.aws_route_table.publicRT",
            "module.vpc_bh.aws_subnet.publicsubnet1",
            "module.vpc_bh.aws_subnet.publicsubnet2",
            "module.vpc_bh.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_bh",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association_3",
      "provider": "module.vpc_bh.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bef05b1fbe3ed2a9",
            "route_table_id": "rtb-03e553efda44c7bd7",
            "subnet_id": "subnet-078a4c439350d4285"
          },
          "dependencies": [
            "module.vpc_bh.aws_route_table.privateRT",
            "module.vpc_bh.aws_subnet.privatesubnet1",
            "module.vpc_bh.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_bh",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association_4",
      "provider": "module.vpc_bh.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e49d860f96171d16",
            "route_table_id": "rtb-03e553efda44c7bd7",
            "subnet_id": "subnet-05ad3a18e694f48b7"
          },
          "dependencies": [
            "module.vpc_bh.aws_route_table.privateRT",
            "module.vpc_bh.aws_subnet.privatesubnet1",
            "module.vpc_bh.aws_subnet.privatesubnet2",
            "module.vpc_bh.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_rdp",
      "provider": "module.security_group.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:513438565697:security-group/sg-0ed12cc3b652409b4",
            "description": "Allow RDP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed12cc3b652409b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "allow_rdp",
            "name_prefix": "",
            "owner_id": "513438565697",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-Allow_RDP-BH"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b7053e2bb8566c6"
          },
          "dependencies": [
            "module.vpc_bh.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_bh",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet1",
      "provider": "module.vpc_bh.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:513438565697:subnet/subnet-078a4c439350d4285",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-078a4c439350d4285",
            "map_public_ip_on_launch": false,
            "owner_id": "513438565697",
            "tags": {
              "Name": "PrivateSubnet1-BH"
            },
            "vpc_id": "vpc-03b7053e2bb8566c6"
          },
          "dependencies": [
            "module.vpc_bh.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_bh",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet2",
      "provider": "module.vpc_bh.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:513438565697:subnet/subnet-05ad3a18e694f48b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-05ad3a18e694f48b7",
            "map_public_ip_on_launch": false,
            "owner_id": "513438565697",
            "tags": {
              "Name": "PrivateSubnet2-BH"
            },
            "vpc_id": "vpc-03b7053e2bb8566c6"
          },
          "dependencies": [
            "module.vpc_bh.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_bh",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet1",
      "provider": "module.vpc_bh.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:513438565697:subnet/subnet-0230f68c3bad7cbe3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0230f68c3bad7cbe3",
            "map_public_ip_on_launch": false,
            "owner_id": "513438565697",
            "tags": {
              "Name": "PublicSubnet1-BH"
            },
            "vpc_id": "vpc-03b7053e2bb8566c6"
          },
          "dependencies": [
            "module.vpc_bh.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_bh",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet2",
      "provider": "module.vpc_bh.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:513438565697:subnet/subnet-03f6a9c398003bfb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03f6a9c398003bfb5",
            "map_public_ip_on_launch": false,
            "owner_id": "513438565697",
            "tags": {
              "Name": "PublicSubnet2-BH"
            },
            "vpc_id": "vpc-03b7053e2bb8566c6"
          },
          "dependencies": [
            "module.vpc_bh.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_bh",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.vpc_bh.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:513438565697:vpc/vpc-03b7053e2bb8566c6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-045d7c969d12762c4",
            "default_route_table_id": "rtb-0cbbeaf6fff9c0c17",
            "default_security_group_id": "sg-09f9fdf59c786619e",
            "dhcp_options_id": "dopt-180aa272",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03b7053e2bb8566c6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cbbeaf6fff9c0c17",
            "owner_id": "513438565697",
            "tags": {
              "Name": "VPC-BH"
            }
          }
        }
      ]
    }
  ]
}